--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   cached_network_image: ^3.4.1
+  shared_preferences: ^2.2.2
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
